Modified PlaceAutocompleteImpl: improved implementation of getPlacePredictions method, now it uses an AdvancedJsonReader for the API call.