@@ -2,16 +2,14 @@ package org.app.travelmode.model;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
+import org.app.model.AdvancedJsonReader;
+import org.app.model.AdvancedJsonReaderImpl;
 import org.app.travelmode.placeautocomplete.PlaceAutocompletePrediction;
 import org.app.travelmode.placeautocomplete.PlaceAutocompleteResponse;
 
-import java.io.BufferedReader;
 import java.io.FileReader;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
 import java.net.URLEncoder;
-import java.util.ArrayList;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 public class PlaceAutocompleteImpl implements PlaceAutocomplete {
@@ -19,8 +17,8 @@ public class PlaceAutocompleteImpl implements PlaceAutocomplete {
     private String googleApiKey = null;
 
     /*
-    * TODO: migliorare il meccanismo di ottenimento della api key
-    * */
+     * TODO: migliorare il meccanismo di ottenimento della api key
+     * */
     public PlaceAutocompleteImpl() {
         try (FileReader jsonReader = new FileReader("src/main/resources/API-Keys.json")) {
             final Gson gson = new Gson();
@@ -32,37 +30,26 @@ public class PlaceAutocompleteImpl implements PlaceAutocomplete {
     }
 
     /*TODO: migliorare la gestione di possibili errori ed exception. Controllare lo status della risposta dell'api...
-     *TODO: Evitare ripetizioni del codice necessario per la chiamata dell'api, sfruttare AdvancedJsonReader...
      */
     @Override
     public List<PlaceAutocompletePrediction> getPlacePredictions(final String input) {
-        final List<PlaceAutocompletePrediction> suggestions = new ArrayList<>();
+        final AdvancedJsonReader jsonReader = new AdvancedJsonReaderImpl();
 
         try {
-            final String encodedInput = URLEncoder.encode(input, "UTF-8");
+            final String encodedInput = URLEncoder.encode(input, StandardCharsets.UTF_8);
             final String urlString = "https://maps.googleapis.com/maps/api/place/autocomplete/json" + "?input=" + encodedInput +
                     "&language=it" +
                     "&types=geocode" +
                     "&location=41.9028,12.4964" +
                     "&radius=500000" +
                     "&key=" + googleApiKey;
-            System.out.println(urlString);
-            final URL url = new URL(urlString);
-            final HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            final BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-            final StringBuilder results = new StringBuilder();
-            String line;
-            while ((line = br.readLine()) != null) {
-                results.append(line);
-            }
-            br.close();
-            System.out.println(results.toString());
+
+            jsonReader.requestJSON(urlString);
+            final String rawJson = jsonReader.getRawJSON();
+
             final Gson gson = new Gson();
-            final PlaceAutocompleteResponse placeAutocompleteResponse = gson.fromJson(results.toString(), PlaceAutocompleteResponse.class);
-            System.out.println(placeAutocompleteResponse);
-            suggestions.addAll(placeAutocompleteResponse.getPredictions());
-            return suggestions;
+            final PlaceAutocompleteResponse placeAutocompleteResponse = gson.fromJson(rawJson, PlaceAutocompleteResponse.class);
+            return List.copyOf(placeAutocompleteResponse.getPredictions());
         } catch (Exception e) {
             e.printStackTrace();
         }
